reverting spartanization for ascii sake
This reverts commit 36855a2b02ba85312e7b9e82c64ce95b16f440e6.