@@ -23,11 +23,12 @@ public class WrapperTest extends TipperTest {
 
     public void testToString() {
         Wrapper<Integer> wrapper = new Wrapper<>();
-        assertEquals("null", (wrapper + ""));
+        assertEquals("null", wrapper.toString());
         Integer x = 2;
         wrapper.set(x);
-        assertEquals((x + ""), (wrapper + ""));
-        assertEquals("string", (new Wrapper<>("string") + ""));
+        assertEquals(x.toString(), wrapper.toString());
+        Wrapper<String> wrapper2 = new Wrapper<>("string");
+        assertEquals("string", wrapper2.toString());
     }
 
     public void testHashCode() {
@@ -38,7 +39,7 @@ public class WrapperTest extends TipperTest {
         assertEquals(x.hashCode(), wrapper.hashCode());
         wrapper.set(x);
         assertEquals(x.hashCode(), wrapper.hashCode());
-        assertEquals(Integer.valueOf(2).hashCode(), wrapper.hashCode());
+        assertEquals(new Integer(2).hashCode(), wrapper.hashCode());
     }
 
     public void testEquals() {
